refactor: 위시 목록 조회 응답 개선